--- a/repaintBackgroundColor/indexChangeBackgroundColorButton.html
+++ b/repaintBackgroundColor/indexChangeBackgroundColorButton.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="styleChangeBack.css">
 
     <body>
-      <button>Click me to repaint!</button>
+      <button onclick="changeColor()">Click me to repaint!</button>
     </body>
               <!-- This is where the js code starts -->
       <script>
