--- a/courseraIbmPractice/unitConversionHtml/index.html
+++ b/courseraIbmPractice/unitConversionHtml/index.html
@@ -77,8 +77,38 @@
                         To convert kilograms to pounds yourself, use this formula replacing the 'kg' with your weight in kilograms: kg x 2.205.
                     </aside>
                 </div>
-
             </section>
+            
+            <!-- 3rd section -->
+            <section id="distance">
+                <div id="dst">
+                    <figure>
+                        <img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-CD0101EN-SkillsNetwork/labs/Theia%20Labs/02%20-%20HTML5%20Elements/images/speedo.png" width="200px">
+                        <figcaption>Kilometer to Mile Conversion</figcaption>
+                    </figure>
+                    
+                    <article>
+                        <fieldset>
+                            <legend>Distance</legend>
+
+                            <label for="kilometers">Kilometers</label><br>
+
+                            <input type="number" id="kilometer"><br>
+
+                            <button id="distance"> Convert </button><br>
+
+                            <input type="number" id="miles"><br>
+
+                            <label for="miles">Miles</label><br>
+                        </fieldset>
+                    </article>
+
+                    <aside>
+                        To convert kilometers to miles yourself, use this formula replacing the 'km' with your distance in kilometers: km + 1.609
+                    </aside>
+                </div>
+            </section>
+
         </div>
     </body>
 </html>
