Change size of the temperature image, add home picture as an anchor to go back to the home section id

--- a/courseraIbmPractice/unitConversionHtml/index.html
+++ b/courseraIbmPractice/unitConversionHtml/index.html
@@ -20,7 +20,7 @@
             <section id="temperature">  
                 <div id="tmp">
                     <figure>
-                        <img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-CD0101EN-SkillsNetwork/labs/Theia%20Labs/02%20-%20HTML5%20Elements/images/thermo.png" width="300px">
+                        <img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-CD0101EN-SkillsNetwork/labs/Theia%20Labs/02%20-%20HTML5%20Elements/images/thermo.png" width="200px">
                         <figcaption>Celsius to Fahrenheit Conversion</figcaption>
                     </figure>
                     
@@ -108,7 +108,15 @@
                     </aside>
                 </div>
             </section>
-
         </div>
+
+        <div id="go-home">
+            <a href="#home"> <!-- making an image an anchor to go back to the home section -->
+                <img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-CD0101EN-SkillsNetwork/labs/Theia%20Labs/02%20-%20HTML5%20Elements/images/home.svg">
+            </a>
+        </div>
+
+        <footer>Learn more about HTML as part of the IBM Fullstack Cloud Developer Certification</footer>
+
     </body>
 </html>
