Add comment at the top of the file for description

--- a/courseraIbmPractice/unitConversionHtml/index.html
+++ b/courseraIbmPractice/unitConversionHtml/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>  <!-- This is a practice for structural elements from IBM fullstack course -->
 <html>
     <head>
         <title>Unit Conversions</title>
