Add better description in the content of h2 element

--- a/courseraIbmPractice/simpleFormEx/index.html
+++ b/courseraIbmPractice/simpleFormEx/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <h1>The field set element</h1>
-        <h3>This is an example of types of input elements inside forms forms</h3>
+        <h3>This is an example of types of input elements commonly used inside the form element.</h3>
         <form>
             <fieldset id="personal_details">
                 <legend>Personal Details</legend>
