--- a/courseraIbmPractice/unitConversionHtml/index.html
+++ b/courseraIbmPractice/unitConversionHtml/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>Unit Conversions</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width-device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -17,7 +20,7 @@
 
         <div id="all-conversions-section">
 
-            <section id="temperature">  
+            <section id="temperature" class="temperature">  
                 <div id="tmp">
                     <figure>
                         <img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-CD0101EN-SkillsNetwork/labs/Theia%20Labs/02%20-%20HTML5%20Elements/images/thermo.png" width="200px">
@@ -50,7 +53,7 @@
             </section>
 
             <!-- 2nd section-->
-            <section id="weight">
+            <section id="weight" class="weight">
                 <div id="wgt">
                     <figure>
                         <img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-CD0101EN-SkillsNetwork/labs/Theia%20Labs/02%20-%20HTML5%20Elements/images/weight.png" width="200px">
@@ -66,7 +69,7 @@
 
                             <input type="number" id="kilograms"><br>
 
-                            <button id="weight"> Convert </button> <br>
+                            <button id="weight" class="weight"> Convert </button> <br>
 
                             <input type="number" id="pounds"><br>
 
@@ -80,7 +83,7 @@
             </section>
             
             <!-- 3rd section -->
-            <section id="distance">
+            <section id="distance" class="distance">
                 <div id="dst">
                     <figure>
                         <img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-CD0101EN-SkillsNetwork/labs/Theia%20Labs/02%20-%20HTML5%20Elements/images/speedo.png" width="200px">
